// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Navigation Header Test Suite renders signed in navigation header unchanged 1`] = `
<div>
  <nav
    class="root"
  >
    <div>
      <a
        aria-label="Home"
        href="/"
      >
        <div
          class="homeContainer"
        >
          <img
            alt="Datatattat logo"
            data-nimg="1"
            decoding="async"
            height="32"
            loading="lazy"
            src="/_next/image?url=%2Fassets%2Flogo-cropped-black-trans.png&w=64&q=75"
            srcset="/_next/image?url=%2Fassets%2Flogo-cropped-black-trans.png&w=32&q=75 1x, /_next/image?url=%2Fassets%2Flogo-cropped-black-trans.png&w=64&q=75 2x"
            style="color: transparent;"
            width="32"
          />
        </div>
      </a>
    </div>
    <div
      class="logoContainer"
    >
      <a
        aria-hidden="true"
        data-testid="datatattat"
        href="/"
      >
        <h2
          class="datatattat"
        >
          DATATATTAT
        </h2>
      </a>
    </div>
    <div
      class="menuContainer"
    >
      <a
        href="https://ko-fi.com/Z8Z81DQMUH"
        target="_blank"
      >
        <div
          class="image"
        >
          <img
            alt="Support us at ko-fi.com"
            height="36"
            src="https://storage.ko-fi.com/cdn/kofi6.png?v=6"
          />
        </div>
        <div
          class="icon"
        >
          <img
            alt="Kofi Logo - A cup of coffee with a heart logo"
            data-nimg="1"
            decoding="async"
            height="32"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="32"
          />
        </div>
      </a>
      <div>
        User Menu
      </div>
    </div>
  </nav>
</div>
`;

exports[`Navigation Header Test Suite renders signed out navigation header unchanged 1`] = `
<div>
  <nav
    class="root"
  >
    <div>
      <a
        aria-label="Home"
        href="/"
      >
        <div
          class="homeContainer"
        >
          <img
            alt="Datatattat logo"
            data-nimg="1"
            decoding="async"
            height="32"
            loading="lazy"
            src="/_next/image?url=%2Fassets%2Flogo-cropped-black-trans.png&w=64&q=75"
            srcset="/_next/image?url=%2Fassets%2Flogo-cropped-black-trans.png&w=32&q=75 1x, /_next/image?url=%2Fassets%2Flogo-cropped-black-trans.png&w=64&q=75 2x"
            style="color: transparent;"
            width="32"
          />
        </div>
      </a>
    </div>
    <div
      class="logoContainer"
    >
      <a
        aria-hidden="true"
        data-testid="datatattat"
        href="/"
      >
        <h2
          class="datatattat"
        >
          DATATATTAT
        </h2>
      </a>
    </div>
    <div
      class="menuContainer"
    >
      <a
        href="https://ko-fi.com/Z8Z81DQMUH"
        target="_blank"
      >
        <div
          class="image"
        >
          <img
            alt="Support us at ko-fi.com"
            height="36"
            src="https://storage.ko-fi.com/cdn/kofi6.png?v=6"
          />
        </div>
        <div
          class="icon"
        >
          <img
            alt="Kofi Logo - A cup of coffee with a heart logo"
            data-nimg="1"
            decoding="async"
            height="32"
            loading="lazy"
            src="/_next/image?url=%2Fimg.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg.jpg&w=64&q=75 2x"
            style="color: transparent;"
            width="32"
          />
        </div>
      </a>
      <a
        class="simpleButton"
        data-testid="sign-in"
        href="/api/auth/signin?callbackUrl=/"
      >
        <svg
          class="logo"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.5 6.5C7.5 8.981 9.519 11 12 11s4.5-2.019 4.5-4.5S14.481 2 12 2 7.5 4.019 7.5 6.5zM20 21h1v-1c0-3.859-3.141-7-7-7h-4c-3.86 0-7 3.141-7 7v1h17z"
          />
        </svg>
      </a>
    </div>
  </nav>
</div>
`;
